--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Şarkı Sözleri Uygulaması</title>
-  <script src="https://apis.google.com/js/api.js" async defer></script>
+  <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()" async defer></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://unpkg.com/mammoth@latest/mammoth.browser.min.js"></script>
   <script src="https://unpkg.com/pdfjs-dist@3.4.120/build/pdf.min.js"></script>
@@ -28,43 +28,46 @@
   </div>
 
   <script>
-    let accessToken = null;
+    function gapiLoaded() {
+      console.log('GAPI yüklendi');
+    }
 
-    async function initGapi() {
-      await gapi.load('client');
-      await gapi.client.init({
-        apiKey: 'AIzaSyD2hsJkZd5vEbKk6B4QqZ7Y6u8t9Xw0j1A',
-        discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']
-      });
+    function initGapi() {
+      gapi.load('client', async () => {
+        await gapi.client.init({
+          apiKey: 'AIzaSyD2hsJkZd5vEbKk6B4QqZ7Y6u8t9Xw0j1A',
+          discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']
+        });
 
-      const client = google.accounts.oauth2.initCodeClient({
-        client_id: '410982653477-lcit9rcrr9chhuolceqksjjs21cqrq47.apps.googleusercontent.com',
-        scope: 'https://www.googleapis.com/auth/drive.readonly',
-        ux_mode: 'popup',
-        callback: async (response) => {
-          if (response.code) {
-            const tokenResponse = await fetch('https://oauth2.googleapis.com/token', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-              body: new URLSearchParams({
-                client_id: '410982653477-lcit9rcrr9chhuolceqksjjs21cqrq47.apps.googleusercontent.com',
-                code: response.code,
-                grant_type: 'authorization_code',
-                redirect_uri: 'https://chipura35.github.io/sarki-sozleri/'
-              })
-            }).then(r => r.json());
+        const client = google.accounts.oauth2.initCodeClient({
+          client_id: '410982653477-lcit9rcrr9chhuolceqksjjs21cqrq47.apps.googleusercontent.com',
+          scope: 'https://www.googleapis.com/auth/drive.readonly',
+          ux_mode: 'popup',
+          callback: async (response) => {
+            if (response.code) {
+              const tokenResponse = await fetch('https://oauth2.googleapis.com/token', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                body: new URLSearchParams({
+                  client_id: '410982653477-lcit9rcrr9chhuolceqksjjs21cqrq47.apps.googleusercontent.com',
+                  code: response.code,
+                  grant_type: 'authorization_code',
+                  redirect_uri: 'https://chipura35.github.io/sarki-sozleri/'
+                })
+              }).then(r => r.json());
 
-            accessToken = tokenResponse.access_token;
-            gapi.client.setToken({ access_token: accessToken });
+              const accessToken = tokenResponse.access_token;
+              gapi.client.setToken({ access_token: accessToken });
 
-            document.getElementById('login').classList.add('hidden');
-            document.getElementById('app').classList.remove('hidden');
-            console.log('Giriş başarılı');
+              document.getElementById('login').classList.add('hidden');
+              document.getElementById('app').classList.remove('hidden');
+              console.log('Giriş başarılı');
+            }
           }
-        }
-      });
+        });
 
-      client.requestCode();
+        client.requestCode();
+      });
     }
 
     function chooseFolder() {
@@ -74,7 +77,7 @@
 
       const picker = new google.picker.PickerBuilder()
         .addView(view)
-        .setOAuthToken(accessToken)
+        .setOAuthToken(gapi.client.getToken().access_token)
         .setDeveloperKey('AIzaSyD2hsJkZd5vEbKk6B4QqZ7Y6u8t9Xw0j1A')
         .setCallback(async (data) => {
           if (data.action === google.picker.Action.PICKED) {
@@ -97,13 +100,13 @@
                 try {
                   if (f.name.endsWith('.txt')) {
                     const r = await fetch(`https://www.googleapis.com/drive/v3/files/${f.id}?alt=media`, {
-                      headers: { 'Authorization': 'Bearer ' + accessToken }
+                      headers: { 'Authorization': 'Bearer ' + gapi.client.getToken().access_token }
                     });
                     text = await r.text();
                   }
                   else if (f.name.endsWith('.docx')) {
                     const blob = await (await fetch(`https://www.googleapis.com/drive/v3/files/${f.id}?alt=media`, {
-                      headers: { 'Authorization': 'Bearer ' + accessToken }
+                      headers: { 'Authorization': 'Bearer ' + gapi.client.getToken().access_token }
                     })).blob();
                     const arrayBuffer = await blob.arrayBuffer();
                     const result = await mammoth.extractRawText({ arrayBuffer });
@@ -111,7 +114,7 @@
                   }
                   else if (f.name.endsWith('.pdf')) {
                     const blob = await (await fetch(`https://www.googleapis.com/drive/v3/files/${f.id}?alt=media`, {
-                      headers: { 'Authorization': 'Bearer ' + accessToken }
+                      headers: { 'Authorization': 'Bearer ' + gapi.client.getToken().access_token }
                     })).blob();
                     const url = URL.createObjectURL(blob);
                     const pdf = await pdfjsLib.getDocument(url).promise;
@@ -124,7 +127,7 @@
                   }
                   else {
                     const blob = await (await fetch(`https://www.googleapis.com/drive/v3/files/${f.id}?alt=media`, {
-                      headers: { 'Authorization': 'Bearer ' + accessToken }
+                      headers: { 'Authorization': 'Bearer ' + gapi.client.getToken().access_token }
                     })).blob();
                     const url = URL.createObjectURL(blob);
                     const worker = await Tesseract.createWorker();
